--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="basic">#b6cfff</color>
+    <color name="basic">#8fbad8</color>
     <color name="nav">#EEEDFF</color>
     <color name="inside">#E2EAFF</color>
 
