--- a/app/src/main/res/layout/exclude_cell.xml
+++ b/app/src/main/res/layout/exclude_cell.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#f4f4f4"
+    android:background="#FFFFFF"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/time_tv"
+        android:id="@+id/excludeContent"
         android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="12:00"
+        android:text="exclude"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,31 +23,40 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/content_tv"
+        android:id="@+id/time_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="19sp"
-        app:layout_constraintBottom_toBottomOf="@id/time_tv"
-        app:layout_constraintStart_toEndOf="@id/time_tv"
-        app:layout_constraintTop_toTopOf="@id/time_tv" />
+        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
+        app:layout_constraintStart_toEndOf="@id/excludeContent"
+        app:layout_constraintTop_toTopOf="@id/excludeContent" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_checkbox"
-        android:button="@null"
-        app:layout_constraintBottom_toBottomOf="@id/time_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/content_tv"
-        app:layout_constraintTop_toTopOf="@id/time_tv"
-        app:layout_constraintVertical_bias="0.6"
-        tools:ignore="TouchTargetSizeCheck" />
+    <TextView
+        android:id="@+id/wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text=" ~ "
+        android:textSize="19sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
+        app:layout_constraintStart_toEndOf="@id/time_start"
+        app:layout_constraintTop_toTopOf="@id/excludeContent"/>
+
+    <TextView
+        android:id="@+id/time_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
+        app:layout_constraintStart_toEndOf="@id/wave"
+        app:layout_constraintTop_toTopOf="@id/excludeContent" />
 
     <View
         android:id="@+id/divider"
@@ -59,7 +68,7 @@
         android:background="@color/list_divider_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/time_tv" />
+        app:layout_constraintTop_toBottomOf="@id/excludeContent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
