--- a/app/src/main/res/layout/test_dialog.xml
+++ b/app/src/main/res/layout/test_dialog.xml
@@ -50,47 +50,35 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:text="시간 설정"
+                android:layout_marginTop="6dp"
+                android:text="날짜 설정"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
-            <TextView
+            <EditText
+                android:id="@+id/DateET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:ems="10"
+                android:hint="2021.00.00"
+                android:inputType="text"
+                android:textColor="#000000"
+                android:textColorHint="#7F7F7F"
+                android:textSize="20sp" />
+
+           <!-- <TextView
                 android:id="@+id/time_set"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textSize="20sp" />
+                android:textSize="20sp" />-->
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/eventTimeTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="중요도 설정"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1" />
-        </LinearLayout>
 
         <Button
             android:id="@+id/save_btn"
