--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,13 @@
     <color name="inside">#E2EAFF</color>
 
     <color name="gray">#808080</color>
+    <color name="list_divider_color">#989898</color>
+
+    <color name="dandelion">#FFD31A</color>
+    <color name="sunKissedCoral">#EA666C</color>
+    <color name="blushingBride">#F8D5E0</color>
+    <color name="twilightPurple">#66648B</color>
+    <color name="afterMidnight">#30343F</color>
+    <color name="red">#FF0000</color>
 
 </resources>
