--- a/app/src/main/res/layout/month_exclude_dialog.xml
+++ b/app/src/main/res/layout/month_exclude_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -26,93 +25,63 @@
             android:id="@+id/eventNameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:ems="10"
+            android:gravity="center"
             android:hint="내용을 입력하세요."
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#7F7F7F"
-            android:textSize="20sp" />
+            android:textSize="17dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/start"
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="시작"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <EditText
                 android:id="@+id/starttime"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:hint="시작 시간을 입력하세요."
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="시작 시간"
                 android:inputType="text"
                 android:textColor="#000000"
                 android:textColorHint="#7F7F7F"
-                android:textSize="13sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+                android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/end"
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="끝"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <EditText
                 android:id="@+id/endtime"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:hint="끝나는 시간을 입력하세요."
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:hint="종료 시간"
                 android:inputType="text"
                 android:textColor="#000000"
                 android:textColorHint="#7F7F7F"
-                android:textSize="13sp" />
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/save_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="0dp"
                 android:background="#00FFFFFF"
                 android:onClick="saveEventAction"
@@ -125,14 +94,13 @@
                 android:id="@+id/cancel_btn"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="0dp"
                 android:background="#00FFFFFF"
                 android:onClick="CancelAction"
                 android:text="Cancel"
-                android:textColor="@color/red"
+                android:textColor="#ED8975"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
     </LinearLayout>
