--- a/app/src/main/res/layout/month_exclude_fragment.xml
+++ b/app/src/main/res/layout/month_exclude_fragment.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".myday.MyDayFragment"
+    tools:context=".month.MonthExcludeFragment"
     android:background="@color/white">
 
 
     <TextView
-        android:id="@+id/todayDate"
+        android:id="@+id/exclude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="152dp"
         android:layout_marginTop="20dp"
-        android:text="TextView"
+        android:text="제외 시간대"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -28,25 +28,25 @@
         android:layout_marginEnd="30dp"
         android:background="@color/white"
         android:src="@drawable/ic_baseline_add_24"
-        app:layout_constraintBottom_toBottomOf="@+id/todayDate"
+        app:layout_constraintBottom_toBottomOf="@+id/exclude"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/todayDate"
+        app:layout_constraintTop_toTopOf="@+id/exclude"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
     <ImageButton
-        android:id="@+id/reRoll_btn"
+        android:id="@+id/back_btn"
         android:layout_width="17dp"
         android:layout_height="17dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginStart="30dp"
         android:background="@color/white"
-        android:src="@drawable/ic_baseline_rotate_left_24"
-        app:layout_constraintBottom_toBottomOf="@+id/todayDate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/todayDate"
-        app:layout_constraintVertical_bias="0.444"
+        android:src="@drawable/ic_baseline_chevron_left_24"
+        app:layout_constraintBottom_toBottomOf="@+id/exclude"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/exclude"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <ListView
-        android:id="@+id/eventListView"
+        android:id="@+id/monthEventListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="30dp"
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/todayDate" />
+        app:layout_constraintTop_toBottomOf="@id/exclude" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
