--- a/app/src/main/res/layout/month_fix_cell.xml
+++ b/app/src/main/res/layout/month_fix_cell.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    android:background="#f4f4f4"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/excludeContent"
+        android:id="@+id/fixContent"
         android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="exclude"
+        android:text="fix"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,40 +22,40 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/time_start"
+        android:id="@+id/fix_time_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="19sp"
-        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
-        app:layout_constraintStart_toEndOf="@id/excludeContent"
-        app:layout_constraintTop_toTopOf="@id/excludeContent" />
+        app:layout_constraintBottom_toBottomOf="@id/fixContent"
+        app:layout_constraintStart_toEndOf="@id/fixContent"
+        app:layout_constraintTop_toTopOf="@id/fixContent" />
 
     <TextView
-        android:id="@+id/wave"
+        android:id="@+id/fix_wave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text=" ~ "
-        android:textSize="19sp"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
-        app:layout_constraintStart_toEndOf="@id/time_start"
-        app:layout_constraintTop_toTopOf="@id/excludeContent"/>
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="@id/fixContent"
+        app:layout_constraintStart_toEndOf="@id/fix_time_start"
+        app:layout_constraintTop_toTopOf="@id/fixContent" />
 
     <TextView
-        android:id="@+id/time_end"
+        android:id="@+id/fix_time_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="19sp"
-        app:layout_constraintBottom_toBottomOf="@id/excludeContent"
-        app:layout_constraintStart_toEndOf="@id/wave"
-        app:layout_constraintTop_toTopOf="@id/excludeContent" />
+        app:layout_constraintBottom_toBottomOf="@id/fixContent"
+        app:layout_constraintStart_toEndOf="@id/fix_wave"
+        app:layout_constraintTop_toTopOf="@id/fixContent" />
 
     <View
         android:id="@+id/divider"
@@ -68,7 +67,7 @@
         android:background="@color/list_divider_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/excludeContent" />
+        app:layout_constraintTop_toBottomOf="@id/fixContent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
