--- a/app/src/main/res/layout/month_fix_dialog.xml
+++ b/app/src/main/res/layout/month_fix_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -17,60 +16,56 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="일정 추가"
+            android:text="고정 스케줄 추가"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
-
         <EditText
-            android:id="@+id/eventNameET"
+            android:id="@+id/fix_eventNameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
             android:ems="10"
+            android:gravity="center"
             android:hint="내용을 입력하세요."
             android:inputType="text"
             android:textColor="#000000"
             android:textColorHint="#7F7F7F"
-            android:textSize="20sp" />
+            android:textSize="17dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/eventDateTV"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginTop="6dp"
-                android:text="날짜 설정"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/DateET"
+                android:id="@+id/fix_starttime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:ems="10"
-                android:hint="2021.00.00"
+                android:gravity="center"
+                android:hint="시작 시간"
                 android:inputType="text"
                 android:textColor="#000000"
                 android:textColorHint="#7F7F7F"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
+            <TextView
+                android:id="@+id/fix_endtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:hint="종료 시간"
+                android:inputType="text"
+                android:textColor="#000000"
+                android:textColorHint="#7F7F7F"
+                android:textSize="20dp" />
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,19 +78,6 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/save_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="0dp"
-                android:background="#00FFFFFF"
-                android:onClick="saveEventAction"
-                android:text="Save"
-                android:textColor="#8FBAD8"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
                 android:id="@+id/cancel_btn"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
@@ -106,8 +88,19 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="0dp"
+                android:background="#00FFFFFF"
+                android:onClick="saveEventAction"
+                android:text="Save"
+                android:textColor="#8FBAD8"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
-
 
     </LinearLayout>
 
