바텀 네비게이션 이미지 및 이름 변경
-Month -> Time 으로 변경
-돋보기 이미지 -> 시간 추가 이미지로 변경

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -16,8 +16,8 @@
     <item
         android:id = "@+id/bottom_month"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_search_24"
-        android:title="Month" />
+        android:icon="@drawable/ic_baseline_more_time_24"
+        android:title="Time" />
 
     <item
         android:id = "@+id/bottom_set"
