--- a/app/src/main/res/layout/month_exclude_dialog.xml
+++ b/app/src/main/res/layout/month_exclude_dialog.xml
@@ -22,7 +22,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/eventNameET"
+            android:id="@+id/eventET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -77,18 +77,6 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/save_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="0dp"
-                android:background="#00FFFFFF"
-                android:onClick="saveEventAction"
-                android:text="Save"
-                android:textColor="#8FBAD8"
-                android:textSize="20sp"
-                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/cancel_btn"
@@ -100,6 +88,20 @@
                 android:textColor="#ED8975"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="0dp"
+                android:background="#00FFFFFF"
+                android:onClick="saveEventAction"
+                android:text="Save"
+                android:textColor="#8FBAD8"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
